--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
+    "react-hover-animation": "^2.1.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "0.28.1"
