--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "2.3.1",
     "moment": "2.29.1",
     "node-sass": "6.0.0",
+    "nodemailer": "^6.6.0",
     "nouislider": "15.1.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
