--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-hover-animation": "^2.1.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
