--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "classnames": "2.3.1",
+    "dotenv": "^9.0.2",
+    "firebase": "^8.6.1",
+    "jquery": "^3.6.0",
+    "jquery-ui": "^1.12.1",
     "moment": "2.29.1",
     "node-sass": "6.0.0",
     "nodemailer": "^6.6.0",
@@ -18,10 +22,12 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-firebase-hooks": "^3.0.4",
     "react-hover-animation": "^2.1.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "react-slick": "0.28.1"
+    "react-slick": "0.28.1",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "@babel/cli": "7.13.16",
